doing testing on dropdown shingling issues wrapping use case and test case in same column flex class testing shingling side by side, narrowing down if issue is tied to JS, or independent of JS handling and go from there

--- a/strainchain/static/styles.css
+++ b/strainchain/static/styles.css
@@ -73,6 +73,10 @@ main {
     padding-left: 0%;
     padding-right: 0%;
 }
+.columnflex {
+    display: flex;
+    flex-direction: column;
+}
 .center-pad-text {
     padding-left: 25%;
     padding-right: 25%;
